# StudentAssignment

./: .gitignore  Cargo.toml  Readme.md  example.json  notes_ger.md
.github/workflows/: rust.yml
src/: main.rs  solver.rs
