[package]
name = "student_assignment-rs"
version = "0.1.0"
authors = ["Matthias Moeller"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
"serde" = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
clap = {version= "^4", features = ["derive"] }

# not possible to put it in z3 dependencies yet: https://github.com/rust-lang/cargo/issues/7914
[target.'cfg(unix)'.dependencies.z3]
version = "^0.11"

[target.'cfg(windows)'.dependencies.z3]
version = "^0.11"
features = ["static-link-z3"]
